# LanternOS_DSOQ

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  LICENSE  NOTICE.md  README.md
bhavaloader/: CMakeLists.txt  Makefile  main.c
bhavaloader/src/: efi_main.cpp  main.cpp
bhavaloader/src/efi/: memory.h
bhavaloader/src/elf/: elf_header.h
bhavaloader/src/font/: psf.h
bhavaloader/src/util/: memcpy.h  print.h
lanternOS/kernel/: CMakeLists.txt
lanternOS/kernel/include/tty/: tty.h
lanternOS/kernel/src/: kmain.cpp
lanternOS/kernel/src/tty/: tty.cpp
scripts/: build.py  install-toolchain.py  run_qemu.sh
